--- a/index.css
+++ b/index.css
@@ -1,73 +1,3 @@
-#parent{
-    color: red;
-}
-
-.header{
-    display: flex;
-    margin: 30px;
-    justify-content: space-between;
-    border: 1px solid black;
-}
-.logo{
-    width: 100px;
-}
-.nav-items{
-    padding: 17px 36px;
-    ul{
-        display: flex; 
-        gap: 35px;
-        list-style-type: none;
-        li{
-            font-size: 24px;
-        }
-    }
-    
-}
-.search{
-    padding-bottom: 10px;
-}
-
-.res-logo{
-    width: 100%;
-    height: 45%;
-}
-.res-card{
-    padding: 5px;
-    width: 200px;
-   
-}
-.res-card:hover{
-    border: 1px solid black;
-    cursor: pointer;
-}
-
-.res-conntainer{
-    display: flex;
-    gap: 31px;
-    flex-wrap: wrap;
-}
-
-.filter-btn{
-    margin: 10px;
-   cursor: pointer;
-}
-.shimmer-container{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.shimmer-card{
-margin: 10px;
-width: 200px;
-height: 400px;
-background-color: #f0f0f0;
-}
-.login{
-    cursor: pointer;
-}
-.filter{
-    display: flex;
-}
-.search{
-    margin: 10px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
